--- a/templates/base.html
+++ b/templates/base.html
@@ -29,10 +29,10 @@
       <div class="about">
         <p class="title">About me</p>
         <p class="text">
-          I am an allround web developer. I am a senior programmer with good
-          knowledge of front-end techniques. Vitae sapien pellentesque habitant
-          morbi tristique senectus et. Aenean sed adipiscing diam donec
-          adipiscing tristique risus.
+          I am an allround web developer. I am a junior programmer with good
+          knowledge of front-end and techniques. I love structure and order and
+          I also stand for quality. I love spending time on fixing little
+          details and optimizing website.
         </p>
       </div>
       <div>
